Готов первый таб

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,12 +1,13 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: "Open Sans", Arial, sans-serif;
-    font-size: 16px;
-    line-height: 19px;
-    font-weight: 400;
-    color: #9AA2A8;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 400;
+  background-color: #ffffff;
+  color: #9AA2A8;
+}
 .modal {
   width: 720px;
   position: fixed;
